[project]
name = "platooning-lora"
version = "0.1.0"
description = "LoRA fine-tuning project for platooning"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.21.0",
    "transformers>=4.25.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "wandb>=0.15.0",
    "bitsandbytes>=0.41.0",
    "xformers>=0.0.20",
    "scipy>=1.9.0",
    "toml>=0.10.2",
    "opencv-python>=4.11.0.86",
    "einops>=0.8.1",
    "imagesize>=1.4.1",
    "rich>=14.1.0",
    "lion-pytorch>=0.2.3",
    "lycoris-lora>=2.1.0.post3",
    "prodigyopt>=1.1.2",
    "schedulefree>=1.4.1",
    "voluptuous>=0.15.2",
]

[tool.setuptools]
packages = []
py-modules = []
