[project]
name = "platooning-lora"
version = "0.1.0"
description = "LoRA training for Platooning models"
authors = [
    { name = "Sleiman Almohamad", email = "sleiman.n.almohamad@gmail.com" },
]
dependencies = [
    "accelerate==0.33.0",
    "transformers==4.44.0",
    "diffusers[torch]==0.25.0",
    "ftfy==6.1.1",
    "opencv-python==4.8.1.78",
    "einops==0.7.0",
    "pytorch-lightning==1.9.0",
    "bitsandbytes==0.44.0",
    "lion-pytorch==0.0.6",
    "schedulefree==1.4",
    "pytorch-optimizer==3.5.0",
    "prodigy-plus-schedule-free==1.9.0",
    "prodigyopt==1.1.2",
    "tensorboard",
    "safetensors==0.4.4",
    "altair==4.2.2",
    "easygui==0.98.3",
    "toml==0.10.2",
    "voluptuous==0.13.1",
    "huggingface-hub==0.24.5",
    "imagesize==1.4.1",
    "numpy<=2.0",
    "rich==13.7.0",
    "sentencepiece==0.2.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["library", "networks"]
